Add MockBukkit utilities and other stuff